--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <!-- Background colors -->
         <item name="android:colorBackground">@color/background_light</item>
         <item name="colorSurface">@color/surface_light</item>
+        <item name="colorSurfaceVariant">@color/surface_variant_light</item>
         <item name="colorOnSurface">@color/text_primary_light</item>
         <item name="colorOnBackground">@color/text_primary_light</item>
         
@@ -79,5 +80,11 @@
     
     <style name="TextAppearance.WeatherBold.Caption" parent="TextAppearance.MaterialComponents.Caption">
         <item name="android:textColor">@color/text_secondary_light</item>
+    </style>
+    
+    <!-- Splash Screen Theme -->
+    <style name="Theme.WeatherBold.Splash" parent="Theme.WeatherBold.NoActionBar">
+        <item name="android:windowBackground">@color/surface_light</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
